--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview --strictPort"
   },
   "dependencies": {
+    "playwright": "^1.54.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -19,5 +20,21 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^5.4.2"
-  }
+  },
+  "description": "A powerful web-based tool that transforms user sketches into playable Phaser 3 games. Draw sprites, design levels, configure characters, and generate games instantly!",
+  "main": "postcss.config.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/retroam/game_builder.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/retroam/game_builder/issues"
+  },
+  "homepage": "https://github.com/retroam/game_builder#readme"
 }
